# python-webuntis

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  deploy.sh  dev_requirements.txt  pyproject.toml  run-tests.py  setup.cfg  setup.py  testcreds.py  tox.ini
.github/workflows/: codeql-analysis.yml  publish.yml
docs/: Makefile  changelog.rst  conf.py  etc.rst  exceptions.rst  index.rst  license.rst  objects.rst  quickstart.rst  session.rst  utils.rst
examples/: credentials.py  html_timetable.py
tests/: __init__.py  test_objects.py  test_session.py
tests/static/: getdepartments_mock.json  getschoolyears_mock.json  getstatusdata_mock.json  getteachers_mock.json
tests/utils/: test_datetime_utils.py  test_misc.py  test_remote.py  test_timetable_utils.py  test_userinput.py
webuntis/: __init__.py  errors.py  objects.py  objects.pyi  session.py  session.pyi
webuntis/tests/: __init__.py  _utils.py  offline.py  online.py  session.py  test_objects.py  utils.py
webuntis/tests/static/: getdepartments_mock.json  getholidays_mock.json  getklassen_mock.json  getrooms_mock.json  getschoolyears_mock.json  getstatusdata_mock.json  getsubjects_mock.json  getteachers_mock.json  gettimegrid_mock.json  gettimetables_mock.json
webuntis/tests/utils/: test_misc.py  test_remote.py  userinput.py
webuntis/utils/: __init__.py  config.py  config_utils.py  datetime_utils.py  logger.py  misc.py  option_utils.py  remote.py  third_party.py  timetable_utils.py  userinput.py
