[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webuntis"
version = "0.1.24"
authors = [
    { name = "Markus Unterwaditzer", email = "markus@unterwaditzer.net" },
    { name = "August Hörandl", email = "august.hoerandl@gmx.at" }
]
description = "Bindings for WebUntis API"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "LICENSE" }
requires-python = ">=3.4"
dependencies = ["requests"]
urls = { Homepage = "https://github.com/python-webuntis/python-webuntis" }

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.bdist_wheel]
universal = true

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
webuntis = ["py.typed", "*.pyi"]

docs = ["*.rst", "*.py", "Makefile"]
examples = ["*.py"]

tests = ["*.json"]

[tool.setuptools.exclude-package-data]
docs = ["_build/*"]
examples = ["mytests/*"]
[tool.setuptools.manifest]

include = [
    "README.rst",
    "LICENSE",
    ".coveragerc",
    "webuntis/py.typed",
]
recursive-include = [
    "docs *.rst",
    "docs Makefile",
    "examples *.py",
    "webuntis *.pyi",
    "docs *.py",
    "tests *.json",
]
recursive-exclude = [
    "docs/_build *",
    "examples/mytests *",
]

[tool.tox]
envlist = "py27,py38,py39,py310,py311,py312,pypy3"


[tool.tox.testenv]
deps = ["pytest", "mock", "coverage"]
commands = [
"coverage run --source=webuntis/,tests/ --module pytest",
"coverage report --show-missing"
]